@@ -38,7 +38,6 @@ import java.text.ParseException;
 import java.util.*;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.TimeoutException;
-import java.util.stream.Collectors;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.time.FastDateFormat;
 import org.everit.json.schema.Schema;
@@ -72,6 +71,10 @@ public class HelmAppsService implements AppsService {
     final OnyxiaEventPublisher onyxiaEventPublisher;
 
     public static final String ONYXIA_SECRET_PREFIX = "sh.onyxia.release.v1.";
+    private static final String CATALOG = "catalog";
+    private static final String OWNER = "owner";
+    private static final String FRIENDLY_NAME = "friendlyName";
+    private static final String SHARE = "share";
 
     @Autowired
     public HelmAppsService(
@@ -144,13 +147,12 @@ public class HelmAppsService implements AppsService {
                             requestDTO.getFriendlyName());
             onyxiaEventPublisher.publishEvent(installServiceEvent);
             Map<String, String> metadata = new HashMap<>();
-            metadata.put("catalog", Base64Utils.base64Encode(catalogId));
-            metadata.put("owner", Base64Utils.base64Encode(user.getIdep()));
+            metadata.put(CATALOG, Base64Utils.base64Encode(catalogId));
+            metadata.put(OWNER, Base64Utils.base64Encode(user.getIdep()));
             if (requestDTO.getFriendlyName() != null) {
-                metadata.put(
-                        "friendlyName", Base64Utils.base64Encode(requestDTO.getFriendlyName()));
+                metadata.put(FRIENDLY_NAME, Base64Utils.base64Encode(requestDTO.getFriendlyName()));
             }
-            metadata.put("share", Base64Utils.base64Encode(String.valueOf(requestDTO.isShare())));
+            metadata.put(SHARE, Base64Utils.base64Encode(String.valueOf(requestDTO.isShare())));
             kubernetesService.createOnyxiaSecret(
                     region, namespaceId, requestDTO.getName(), metadata);
             return List.of(res.getManifest());
@@ -195,18 +197,13 @@ public class HelmAppsService implements AppsService {
                 installedCharts.parallelStream()
                         .map(release -> getHelmApp(region, user, release))
                         .filter(
-                                service -> {
-                                    boolean canUserSeeThisService = false;
-                                    if (project.getGroup() == null
-                                            || service.isShare()
-                                            || user.getIdep()
-                                                    .equalsIgnoreCase(service.getOwner())) {
-                                        // Personal group
-                                        canUserSeeThisService = true;
-                                    }
-                                    return canUserSeeThisService;
-                                })
-                        .collect(Collectors.toList());
+                                service ->
+                                        // Check if user can see this service
+                                        project.getGroup() == null
+                                                || service.isShare()
+                                                || user.getIdep()
+                                                        .equalsIgnoreCase(service.getOwner()))
+                        .toList();
         ServicesListing listing = new ServicesListing();
         listing.setApps(services);
         return CompletableFuture.completedFuture(listing);
@@ -320,18 +317,18 @@ public class HelmAppsService implements AppsService {
                             .get();
             if (secret != null && secret.getData() != null) {
                 Map<String, String> data = secret.getData();
-                if (data.containsKey("friendlyName")) {
-                    service.setFriendlyName(Base64Utils.base64Decode(data.get("friendlyName")));
+                if (data.containsKey(FRIENDLY_NAME)) {
+                    service.setFriendlyName(Base64Utils.base64Decode(data.get(FRIENDLY_NAME)));
                 }
-                if (data.containsKey("owner")) {
-                    service.setOwner(Base64Utils.base64Decode(data.get("owner")));
+                if (data.containsKey(OWNER)) {
+                    service.setOwner(Base64Utils.base64Decode(data.get(OWNER)));
                 }
-                if (data.containsKey("catalog")) {
-                    service.setCatalogId(Base64Utils.base64Decode(data.get("catalog")));
+                if (data.containsKey(CATALOG)) {
+                    service.setCatalogId(Base64Utils.base64Decode(data.get(CATALOG)));
                 }
-                if (data.containsKey("share")) {
+                if (data.containsKey(SHARE)) {
                     service.setShare(
-                            Boolean.parseBoolean(Base64Utils.base64Decode(data.get("share"))));
+                            Boolean.parseBoolean(Base64Utils.base64Decode(data.get(SHARE))));
                 }
             }
         } catch (Exception e) {
@@ -354,8 +351,7 @@ public class HelmAppsService implements AppsService {
             Map<String, String> result = new HashMap<>();
             node.fields()
                     .forEachRemaining(
-                            currentNode ->
-                                    mapAppender(result, currentNode, new ArrayList<String>()));
+                            currentNode -> mapAppender(result, currentNode, new ArrayList<>()));
             service.setEnv(result);
             service.setSuspendable(service.getEnv().containsKey(SUSPEND_KEY));
             if (service.getEnv().containsKey(SUSPEND_KEY)) {
@@ -377,13 +373,13 @@ public class HelmAppsService implements AppsService {
     public void rename(
             Region region, Project project, User user, String serviceId, String friendlyName)
             throws IOException, InterruptedException, TimeoutException {
-        patchOnyxiaSecret(region, project, user, serviceId, Map.of("friendlyName", friendlyName));
+        patchOnyxiaSecret(region, project, user, serviceId, Map.of(FRIENDLY_NAME, friendlyName));
     }
 
     @Override
     public void share(Region region, Project project, User user, String serviceId, boolean share)
             throws IOException, InterruptedException, TimeoutException {
-        patchOnyxiaSecret(region, project, user, serviceId, Map.of("share", String.valueOf(share)));
+        patchOnyxiaSecret(region, project, user, serviceId, Map.of(SHARE, String.valueOf(share)));
     }
 
     private void patchOnyxiaSecret(
@@ -399,10 +395,7 @@ public class HelmAppsService implements AppsService {
         if (secret != null) {
             Map<String, String> secretData =
                     secret.getData() != null ? secret.getData() : new HashMap<>();
-            data.forEach(
-                    (k, v) -> {
-                        secretData.put(k, Base64Utils.base64Encode(v));
-                    });
+            data.forEach((k, v) -> secretData.put(k, Base64Utils.base64Encode(v)));
             secret.setData(secretData);
             if (secret.getMetadata().getManagedFields() != null) {
                 secret.getMetadata().getManagedFields().clear();
@@ -414,7 +407,7 @@ public class HelmAppsService implements AppsService {
                     .serverSideApply();
         } else {
             Map<String, String> metadata = new HashMap<>();
-            metadata.put("owner", user.getIdep());
+            metadata.put(OWNER, user.getIdep());
             metadata.putAll(data);
             kubernetesService.createOnyxiaSecret(region, namespaceId, serviceId, metadata);
         }
@@ -603,7 +596,7 @@ public class HelmAppsService implements AppsService {
                                     currentTask.setStatus(status);
                                     return currentTask;
                                 })
-                        .collect(Collectors.toList()));
+                        .toList());
 
         return service;
     }
